--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.1.4",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
