--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db.json --p 5000"
   },
   "dependencies": {
     "@vue/composition-api": "^1.1.4",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
